--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,22 @@
+*{
+    margin:0;
+    padding:0;
+}
+
 body{
     background-color: #FFEDD5;
+}
+
+ul{
+    list-style:none;
+}
+
+header{
+    padding:32px 0;
+    text-align:center;
+}
+
+header,section{
+    max-width:300px;
+    margin: 0 auto;
 }
