--- a/src/style.css
+++ b/src/style.css
@@ -20,3 +20,11 @@ header,section{
     max-width:300px;
     margin: 0 auto;
 }
+
+section h2 {
+    background-color: #FED7AA;
+    padding: 8px 16px;
+    text-align: center;
+  
+    margin-bottom: 24px;
+  }
