--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,10 @@ header,section{
     margin: 0 auto;
 }
 
+section {
+    margin-bottom: 24px;
+  }
+
 section h2 {
     background-color: #FED7AA;
     padding: 8px 16px;
@@ -37,4 +41,3 @@ section h2 {
   li .details {
     max-width: 240px;
   }
-  
