Adicionado seletores h1,h2,h3 price em style.css

--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,12 @@ ul{
     list-style:none;
 }
 
+h1, h2, h3, .price {
+  font-family: 'Roboto Serif', serif;
+  text-transform: uppercase;
+  color: #2D2C2A;
+}
+
 header{
     padding:32px 0;
     text-align:center;
