--- a/src/style.css
+++ b/src/style.css
@@ -65,3 +65,9 @@ section h2 {
     font-size: 16px;
 
   }
+
+  .details p {
+    color: rgba(0, 0, 0, 0.6);
+    font-size: 14px;
+    line-height: 21px;
+  }
